toolbar showing works, can't change setting from in app for some reason

--- a/Expedition/Settings.bundle/Root.plist
+++ b/Expedition/Settings.bundle/Root.plist
@@ -44,6 +44,26 @@
 			<key>Key</key>
 			<string></string>
 		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Fade On Close</string>
+			<key>Key</key>
+			<string>fade_on_close</string>
+			<key>DefaultValue</key>
+			<true/>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Show Accessibility Toolbar</string>
+			<key>Key</key>
+			<string>show_toolbar</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
 	</array>
 </dict>
 </plist>
