homepages fully work now :smile:

--- a/Expedition/Info.plist
+++ b/Expedition/Info.plist
@@ -307,7 +307,7 @@
 		<true/>
 	</dict>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>expedition needs access to save a fullpage screenshot</string>
+	<string>Expedition needs access to save photos</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
