--- a/Expedition/Info.plist
+++ b/Expedition/Info.plist
@@ -337,5 +337,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Expedition needs Face ID access to lock the app</string>
 </dict>
 </plist>
